--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "npx nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
